# cocat

./: .env  CONFIG.md  INSTALL.md  PLAN_DOCUMENTATION.md  README.md  model.puml  references_geographiques.md
backend/: .env  FEATURES.md  README.md  db.py  model.py  pyproject.toml  pytest.ini  reference.py  rule.py  settings.py  setup.py  test_model.py  test_reference.py  test_rule.py  test_rules.csv
backend/docs/: rule.html
backend/docs/source/: conf.py  modules.rst  reference.rst  test_rule.rst
backend/src/cocat/: config_model.py  generator.py  model.py  property.py  reference.py  rule.py  utils.py  vocabulary.py
backend/src/cocat/templates/: Main.tpl  Model.tpl  router.tpl
backend/templates/: Model.tpl
backend/tests/: Dataset-model.py  DatasetFilter-model.py  DatasetMultilang-model.py  ref.json  rules.csv  test_db.py  test_model.py  test_property.py  test_ref_environment.csv  test_reference.py  test_rule.py  test_rules.csv  test_vocabulary.py
backend/tests/vocabularies/: update_frequency.csv
backend/vocabularies/: .~lock.status.csv#  .~lock.update_frequency.csv#  accrual_periodicity.csv  status.csv
